# signatureCandidatesAutoDiscover.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml  signatureCandidatesAutoDiscover.py
tests/: tests.py
