[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "signatureCandidatesAutoDiscover"
readme = "ReadMe.md"
description = "A tool for automatic discovery of candidates for signatures used within a file format."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["signatureCandidatesAutoDiscover"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]

[project.scripts]
signatureCandidatesAutoDiscover = "signatureCandidatesAutoDiscover:CLI.run"

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-tools/signatureCandidatesAutoDiscover.py"

[tool.setuptools]
zip-safe = true
py-modules = ["signatureCandidatesAutoDiscover"]

[tool.setuptools_scm]
